--- a/config/x86_64/OpenWrt-K/extpackages.config
+++ b/config/x86_64/OpenWrt-K/extpackages.config
@@ -18,6 +18,10 @@ EXT_PACKAGES_NAME[5]="luci-app-fileassistant"
 EXT_PACKAGES_PATH[5]="luci-app-fileassistant"
 EXT_PACKAGES_REPOSITORIE[5]="https://github.com/77267132/package"
 EXT_PACKAGES_BRANCH[5]=""
+EXT_PACKAGES_NAME[6]="luci-app-gowebdav"
+EXT_PACKAGES_PATH[6]="luci-app-gowebdav"
+EXT_PACKAGES_REPOSITORIE[6]="https://github.com/77267132/package"
+EXT_PACKAGES_BRANCH[6]=""
 EXT_PACKAGES_NAME[7]="homebox"
 EXT_PACKAGES_PATH[7]="homebox"
 EXT_PACKAGES_REPOSITORIE[7]="https://github.com/77267132/package"
@@ -102,3 +106,7 @@ EXT_PACKAGES_NAME[27]="luci-app-vsftpd"
 EXT_PACKAGES_PATH[27]="luci-app-vsftpd"
 EXT_PACKAGES_REPOSITORIE[27]="https://github.com/77267132/package"
 EXT_PACKAGES_BRANCH[27]=""
+EXT_PACKAGES_NAME[28]="gowebdav"
+EXT_PACKAGES_PATH[28]="gowebdav"
+EXT_PACKAGES_REPOSITORIE[28]="https://github.com/77267132/package"
+EXT_PACKAGES_BRANCH[28]=""
