--- a/config/x86_64/network.config
+++ b/config/x86_64/network.config
@@ -158,4 +158,5 @@ CONFIG_PACKAGE_trojan-plus=y
 CONFIG_PACKAGE_wwan=y
 CONFIG_PACKAGE_xray-core=y
 CONFIG_PACKAGE_vsftpd-alt=y
+CONFIG_PACKAGE_gowebdav=y
 # end of Network
