--- a/config/x86_64/network.config
+++ b/config/x86_64/network.config
@@ -2,6 +2,11 @@
 # Network
 #
 #
+# Download Manager
+#
+CONFIG_PACKAGE_ariang=y
+# end of Download Manager
+#
 # File Transfer
 #
 CONFIG_PACKAGE_aria2=y
