--- a/.github/action/planning/action.yml
+++ b/.github/action/planning/action.yml
@@ -30,41 +30,41 @@ runs:
             export parameter=matrix={\'include\':[
             for i in $(echo $config|sed "s/,/ /g"); do
               #配置完整性检测
-              if [ ! -e "$GITHUB_WORKSPACE/config/$i/OpenWrt-K/compile.config" ]; then
-                echo "::error ::$i配置中缺少openwrt编译配置文件(OpenWrt-K/compile.config),请尝试使用新版OpenWrt-k配置构建工具"
+              if [ ! -e "$GITHUB_WORKSPACE/config/$i/OpenWrt-Z/compile.config" ]; then
+                echo "::error ::$i配置中缺少openwrt编译配置文件(OpenWrt-Z/compile.config),请尝试使用新版OpenWrt-k配置构建工具"
                 exit 1
-              elif [ -z "$(sed -n '/openwrt_tag\/branch/p' $GITHUB_WORKSPACE/config/$i/OpenWrt-K/compile.config | sed -e 's/.*=//')" ]; then
+              elif [ -z "$(sed -n '/openwrt_tag\/branch/p' $GITHUB_WORKSPACE/config/$i/OpenWrt-Z/compile.config | sed -e 's/.*=//')" ]; then
                 echo "::error ::无法获取$i配置中编译的openwrt分支或版本,请尝试使用新版OpenWrt-k配置构建工具"
                 exit 1
               fi
-              if [ ! -e "$GITHUB_WORKSPACE/config/$i/OpenWrt-K/openwrtext.config" ]; then
-                echo "::error ::$i配置中缺少openwrt拓展配置文件(OpenWrt-K/openwrtext.config),请尝试使用新版OpenWrt-k配置构建工具"
+              if [ ! -e "$GITHUB_WORKSPACE/config/$i/OpenWrt-Z/openwrtext.config" ]; then
+                echo "::error ::$i配置中缺少openwrt拓展配置文件(OpenWrt-Z/openwrtext.config),请尝试使用新版OpenWrt-k配置构建工具"
                 exit 1
-              elif [ "$(grep -c "^ipaddr=" $GITHUB_WORKSPACE/config/$i/OpenWrt-K/openwrtext.config)" -eq 0 ];then
-                echo "::error ::无法获取$i配置中openwrt的默认IP(在OpenWrt-K/openwrtext.config中),请尝试使用新版OpenWrt-k配置构建工具"
+              elif [ "$(grep -c "^ipaddr=" $GITHUB_WORKSPACE/config/$i/OpenWrt-Z/openwrtext.config)" -eq 0 ];then
+                echo "::error ::无法获取$i配置中openwrt的默认IP(在OpenWrt-Z/openwrtext.config中),请尝试使用新版OpenWrt-k配置构建工具"
                 exit 1
-              elif [ "$(grep -c "^timezone=" $GITHUB_WORKSPACE/config/$i/OpenWrt-K/openwrtext.config)" -eq 0 ];then
-                echo "::error ::无法获取$i配置中openwrt的时区(在OpenWrt-K/openwrtext.config中),请尝试使用新版OpenWrt-k配置构建工具"
+              elif [ "$(grep -c "^timezone=" $GITHUB_WORKSPACE/config/$i/OpenWrt-Z/openwrtext.config)" -eq 0 ];then
+                echo "::error ::无法获取$i配置中openwrt的时区(在OpenWrt-Z/openwrtext.config中),请尝试使用新版OpenWrt-k配置构建工具"
                 exit 1
-              elif [ "$(grep -c "^zonename=" $GITHUB_WORKSPACE/config/$i/OpenWrt-K/openwrtext.config)" -eq 0 ];then
-                echo "::error ::无法获取$i配置中openwrt的时区区域名称(在OpenWrt-K/openwrtext.config中),请尝试使用新版OpenWrt-k配置构建工具"
+              elif [ "$(grep -c "^zonename=" $GITHUB_WORKSPACE/config/$i/OpenWrt-Z/openwrtext.config)" -eq 0 ];then
+                echo "::error ::无法获取$i配置中openwrt的时区区域名称(在OpenWrt-Z/openwrtext.config中),请尝试使用新版OpenWrt-k配置构建工具"
                 exit 1
               fi
-              if [ -z "$(sed -n '/^kmod_compile_exclude_list=/p' $GITHUB_WORKSPACE/config/$i/OpenWrt-K/compile.config | sed -e "s/=[my]\([,]\{0,1\}\)/\1/g" -e 's/.*=//')" ];then
+              if [ -z "$(sed -n '/^kmod_compile_exclude_list=/p' $GITHUB_WORKSPACE/config/$i/OpenWrt-Z/compile.config | sed -e "s/=[my]\([,]\{0,1\}\)/\1/g" -e 's/.*=//')" ];then
                 echo "::warning ::无法获取$i配置中的kmod编译排除列表，这很有可能导致编译失败。"
               fi
               # 检查拓展软件包配置文件
-              if [ ! -e "$GITHUB_WORKSPACE/config/$i/OpenWrt-K/extpackages.config" ]; then
-                echo "::error ::$i配置中缺少拓展软件包配置文件(OpenWrt-K/extpackages.config)即使为空也应该存在,请尝试使用新版OpenWrt-k配置构建工具"
+              if [ ! -e "$GITHUB_WORKSPACE/config/$i/OpenWrt-Z/extpackages.config" ]; then
+                echo "::error ::$i配置中缺少拓展软件包配置文件(OpenWrt-Z/extpackages.config)即使为空也应该存在,请尝试使用新版OpenWrt-k配置构建工具"
                 exit 1
               else
-                EXT_PKGS_CONFIG=$GITHUB_WORKSPACE/config/$i/OpenWrt-K/extpackages.config
+                EXT_PKGS_CONFIG=$GITHUB_WORKSPACE/config/$i/OpenWrt-Z/extpackages.config
                 NUMBER_OF_PKGS1=$(grep -c "^EXT_PACKAGES_NAME\[" $EXT_PKGS_CONFIG)
                 NUMBER_OF_PKGS2=$(sed -n -e "/^EXT_PACKAGES_NAME\[/p" $EXT_PKGS_CONFIG|sed -n '$p'|sed 's/EXT_PACKAGES_NAME\[\([0-9]*\).*/\1/')
                 if [ -z "$NUMBER_OF_PKGS1" ]; then
                   echo "::warning ::$i配置中的拓展软件包配置文件中没有任何拓展软件包配置。"
                 elif [ "$NUMBER_OF_PKGS1" -ne "$NUMBER_OF_PKGS2" ]; then
-                  echo "::error ::$i配置中拓展软件包配置文件(OpenWrt-K/extpackages.config)有错误"
+                  echo "::error ::$i配置中拓展软件包配置文件(OpenWrt-Z/extpackages.config)有错误"
                   n=1
                   # 找出缺少的拓展软件包配置
                   while [ "$n" -le $NUMBER_OF_PKGS2 ]; do
@@ -77,7 +77,7 @@ runs:
               fi
               git clone https://git.openwrt.org/openwrt/openwrt.git $GITHUB_WORKSPACE/openwrt
               cd $GITHUB_WORKSPACE/openwrt
-              export OPENWRT_TAG_BRANCH="$(sed -n '/openwrt_tag\/branch/p' $GITHUB_WORKSPACE/config/$i/OpenWrt-K/compile.config | sed -e 's/.*=//')"
+              export OPENWRT_TAG_BRANCH="$(sed -n '/openwrt_tag\/branch/p' $GITHUB_WORKSPACE/config/$i/OpenWrt-Z/compile.config | sed -e 's/.*=//')"
               git checkout $OPENWRT_TAG_BRANCH
               cat $GITHUB_WORKSPACE/config/$i/target.config >> $GITHUB_WORKSPACE/openwrt/.config
               make defconfig
