--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -386,11 +386,11 @@ jobs:
           elif [ "$(grep -c "^CONFIG_PACKAGE_kmod-shortcut-fe=y$" $OPENWRT_ROOT_PATH/.config)" -ne '0' ];then
             sfe=true
           else
-            echo "::notice ::未检测到sfe设为编译进固件"
+            echo "::notice ::未检测到sfe编译进固件"
             sfe=false
           fi
           if [ $sfe = true ];then
-            echo "::notice ::检测到sfe设为编译进固件，添加sfe所需补丁与附加内核配置"
+            echo "::notice ::检测到sfe编译进固件，添加sfe所需补丁与附加内核配置"
             cp -f $ZLH_PATCH_ROOT_PATH/hack-$kernel_version/953-net-patch-linux-kernel-to-support-shortcut-fe.patch $OPENWRT_ROOT_PATH/target/linux/generic/hack-$kernel_version/
             cp -f $ZLH_PATCH_ROOT_PATH/pending-$kernel_version/613-netfilter_optional_tcp_window_check.patch $OPENWRT_ROOT_PATH/target/linux/generic/pending-$kernel_version/
             echo "# CONFIG_SHORTCUT_FE is not set" >> $OPENWRT_ROOT_PATH/target/linux/generic/config-$kernel_version
@@ -417,7 +417,7 @@ jobs:
           if [ "$(grep -c "^CONFIG_PACKAGE_kmod-nft-fullcone=y$" $OPENWRT_ROOT_PATH/.config)" -ne '0' ] || [ "$(grep -c "^CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_NFT_FULLCONE=y$" $OPENWRT_ROOT_PATH/.config)" -ne '0' ];then
             kernel_version="$(sed -n '/CONFIG_LINUX_/p' $OPENWRT_ROOT_PATH/.config | sed -e 's/CONFIG_LINUX_//' -e 's/=y//' -e 's/_/./g')"
             echo kernel_version=$kernel_version
-            echo "::notice ::检测到nft-fullcone设为编译进固件,添加fullcone所需libnftnl、firewall4、nftables补丁"
+            echo "::notice ::检测到nft-fullcone编译进固件,添加fullcone所需libnftnl、firewall4、nftables补丁"
             rm -rf $OPENWRT_ROOT_PATH/package/{libs/libnftnl,network/config/firewall4,network/utils/nftables}
             mkdir -p $OPENWRT_ROOT_PATH/package/{libs/libnftnl,network/config/firewall4,network/utils/nftables}
             cp -RT $ZLH_PATCH_ROOT_PATH/firewall4 $OPENWRT_ROOT_PATH/package/network/config/firewall4
@@ -438,7 +438,7 @@ jobs:
             echo "nftables-patches" >> $LOG_PATH/zlh_patch.log
             ls $OPENWRT_ROOT_PATH/package/network/utils/nftables/patches/ >> $LOG_PATH/zlh_patch.log
           else
-            echo "::notice ::未检测到nft-fullcone设为编译进固件,跳过添加。"
+            echo "::notice ::未检测到nft-fullcone编译进固件,跳过添加。"
           fi
 
       - name: 为openwrt-22.03/v22.03.*升级dnsmasq与libubox
@@ -463,7 +463,7 @@ jobs:
           gmake -s prepare-tmpinfo
           ./scripts/package-metadata.pl mk tmp/.packageinfo > tmp/.packagedeps 2>$PACKAGEDEPWARNING || { rm -f tmp/.packagedeps; false; }
           if [ -n "$(cat $PACKAGEDEPWARNING)" ]; then
-            echo "::error ::检查到软件包依赖问题,这极有可能导致编译错误，请前往build1检查软件包依赖步骤查看详情。"
+            echo "::error ::检查到软件包依赖问题,这极有可能导致编译错误，请前往build1检查软件包依赖查看详情。"
             cat $PACKAGEDEPWARNING
           fi
           [[ -d $TMPDIR ]] && rm -rf "$TMPDIR"
@@ -526,7 +526,7 @@ jobs:
               ;;
               esac
               if [ "$Arch" != 1 ];then
-                echo "::notice ::检测到luci-app-adguardhome配置为编译进固件,下载DNS名单与架构为$Arch的AdGuardHome核心"
+                echo "::notice ::检测到luci-app-adguardhome编译进固件,下载DNS名单与架构为$Arch的AdGuardHome核心"
                 mkdir -p ./files/usr/bin/AdGuardHome/tmp
                 rm -rf ./files/usr/bin/AdGuardHome/tmp/*
                 latest_ver="$(curl -s https://api.github.com/repos/AdguardTeam/AdGuardHome/releases/latest 2>/dev/null|grep -E 'tag_name' |grep -E 'v[0-9.]+' -o 2>/dev/null)"
@@ -577,7 +577,7 @@ jobs:
                 rm -rf $OPENWRT_ROOT_PATH/files/etc/AdGuardHome-dnslist.yaml $OPENWRT_ROOT_PATH/files/etc/AdGuardHome.yaml $OPENWRT_ROOT_PATH/files/usr/bin/AdGuardHome
               fi
           else
-            echo "::notice ::未检测到luci-app-adguardhome配置为编译进固件,退出执行。"
+            echo "::notice ::未检测到luci-app-adguardhome编译进固件,退出执行。"
             rm -rf $OPENWRT_ROOT_PATH/files/etc/AdGuardHome-dnslist.yaml $OPENWRT_ROOT_PATH/files/etc/AdGuardHome.yaml $OPENWRT_ROOT_PATH/files/usr/bin/AdGuardHome
           fi
 
@@ -617,7 +617,7 @@ jobs:
               		CORE_ARCH="1"
               		;;
               esac
-              echo "::notice ::检测到luci-app-openclash配置为编译进固件,下载架构为$CORE_ARCH的openclash内核"
+              echo "::notice ::检测到luci-app-openclash编译进固件,下载架构为$CORE_ARCH的openclash内核"
               if [ "$CORE_ARCH" != 1 ];then
                 OpenClashTMPDIR=$WORKSPACE_ROOT_PATH/tmp/openclash
                 dev_core_path="$OPENWRT_ROOT_PATH/files/etc/openclash/core/clash"
@@ -657,7 +657,7 @@ jobs:
                 rm -rf $OPENWRT_ROOT_PATH/files/etc/openclash
               fi
           else
-            echo "::notice ::未检测到luci-app-openclash配置为编译进固件,退出执行下载openclash内核。"
+            echo "::notice ::未检测到luci-app-openclash编译进固件,退出执行下载openclash内核。"
             rm -rf $OPENWRT_ROOT_PATH/files/etc/openclash
           fi
           
@@ -691,7 +691,7 @@ jobs:
           echo "::notice ::设置openwrt默认时区名称为$zonename"
           sed -i '6s/R20240101/R${{ needs.planning.outputs.starttime }}/' $OPENWRT_ROOT_PATH/files/etc/uci-defaults/zzz-zoulianghe
           echo "::notice ::设置openwrt发布号为R${{ needs.planning.outputs.starttime }}"
-          sed -i '8s/OpenWrt R20240101 Compiled by Zoulianghe/OpenWrt R${{ needs.planning.outputs.starttime }} Compiled by $compiler/' $OPENWRT_ROOT_PATH/files/etc/uci-defaults/zzz-zoulianghe
+          sed -i '8s/OpenWrt R20240101 Compiled by Zoulianghe/OpenWrt R${{ needs.planning.outputs.starttime }} Compiled by \$compiler\/' $OPENWRT_ROOT_PATH/files/etc/uci-defaults/zzz-zoulianghe
           echo "::notice ::设置openwrt固件版本为OpenWrt R${{ needs.planning.outputs.starttime }}"
           echo "::notice ::设置openwrt编译者为$compiler"
           
