--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -690,8 +690,9 @@ jobs:
           echo "::notice ::设置openwrt默认时区名称为$zonename"
           sed -i "6s/R20240101/R${{ needs.planning.outputs.starttime }}/" $OPENWRT_ROOT_PATH/files/etc/uci-defaults/zzz-zoulianghe
           echo "::notice ::设置openwrt发布号为R${{ needs.planning.outputs.starttime }}"
-          sed -i "8s/OpenWrt R20240101 Compiled by Zoulianghe/OpenWrt R${{ needs.planning.outputs.starttime }} Compiled by '$hostname'/" $OPENWRT_ROOT_PATH/files/etc/uci-defaults/zzz-zoulianghe
+          sed -i "8s/R20240101/R${{ needs.planning.outputs.starttime }}/" $OPENWRT_ROOT_PATH/files/etc/uci-defaults/zzz-zoulianghe
           echo "::notice ::设置openwrt固件版本为OpenWrt R${{ needs.planning.outputs.starttime }}"
+          sed -i "8s/Zoulianghe/${{hostname}}/" $OPENWRT_ROOT_PATH/files/etc/uci-defaults/zzz-zoulianghe
           
       - name: 检查剩余空间
         run: |
